Changing JDK version from 16 to 8